...
                            SocialButtonRow()

                            // Personal Details -2
                            PersonalInfo(uiState.personDetails)

                            // Biography -3
                            Biography(biography = uiState.personDetails.biography)

                            // Known for -3
                            KnownForRow(
                                knownFors = uiState.personDetails.knownFor
                                    .filter { it.title != null },
                            )
...
                Timeline(modifier = Modifier.testTag(TIMELINE_COLUMN_TAG), items = items)
            }
        }
    }
}

const val TIMELINE_COLUMN_TAG = "TIMELINE_COLUMN"
const val PEOPLE_DETAILS_MAIN_BODY = "people_details_main_tag"
const val PEOPLE_DETAILS_KNOWN_FOR_TITLE = "people_details_known_for_title"
const val PEOPLE_DETAILS_KNOWN_FOR = "people_details_known_for"

const val PEOPLE_DETAILS_MEDIA_TYPE_OPTIONS = "people_details_media_type"
const val PEOPLE_DETAILS_DEPARTMENT_OPTIONS = "people_details_department"

