...
const val MOVIE_DETAILS_MAIN_CAST_ROW = "movies_details_main_cast_roe"
const val MOVIE_DETAILS_CREW = "movies_details_bottom_crew"
const val MOVIE_DETAILS_CREW_ROW = "movies_details_bottom_crew_row"
const val MOVIE_DETAILS_CATEGORIES = "movies_details_categories"
const val MOVIE_DETAILS_CATEGORIES_ROW = "movies_details_categories_row"
const val MOVIE_DETAILS_RECOMMENDATIONS = "movies_details_recommendations"
const val MOVIE_DETAILS_RECOMMENDATIONS_ROW = "movies_details_recommendations_row"
const val MOVIE_DETAILS_BOTTOM_BAR = "movies_details_bottom_bar"

@ThemePreviews
@Composable
@ExcludeFromGeneratedCoverageReport
fun MoviesDetailsPreview() {
...
